@@ -1,5 +1,6 @@
 next
 ----
+-metagene: updated metagene2bsml script to use the Ergatis::IdGenerator module for feature ID's.
 -translate_sequence: added option to delete any fasta files generated by component that aren't gene/polypeptide sequences.
 -tbl2asn: Reworked component so now it won't require a ITERATOR_LIST_FILE, and can be chained to the end of a bsml2tbl run
 -ber: added project_abbreviation config variable so berbtab2bsml isn't dependent on specific assembly id patterns.
